ql/test/library-tests/test.expected
ERROR: getCallee() cannot be resolved for type DataFlowPublic::CallNode (test.ql:62,79-88)
